--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.data.web.pageable.page-parameter=pageNumber
 #spring.data.web.pageable.size-parameter=pageSize
+spring.data.web.pageable.default-page-size=10
+spring.data.web.sort.sort-parameter=id,desc
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
