--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.data.web.pageable.default-page-size=10
 spring.data.web.sort.sort-parameter=id,desc
 
 # swagger-ui custom path
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=
