--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.open-in-view=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/shop_it
+spring.datasource.url=jdbc:postgresql://localhost:5432/shopme
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+server.port=9092
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -18,7 +19,5 @@ springdoc.swagger-ui.path=
 #Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
 
-# App Properties
-# App Properties
-exemple.demo.jwtSecret= bezKoderSecretKey
-exemple.demo.jwtExpirationMs= 86400000
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 864000
