--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/shopme
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-server.port=9092
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -13,11 +13,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.data.web.pageable.default-page-size=10
 spring.data.web.sort.sort-parameter=id,desc
 
-# swagger-ui custom path
-springdoc.swagger-ui.path=
 
+server.port=9092
 #Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 864000
+
+springdoc.swagger-ui.configUrl=swagger-config.json
+springdoc.cache.disabled= true
